# Study

./: CodelessSchema.bat  Document.txt  Document_MakeFileFormatPlugin.txt  MSource.txt  Schema.bat  SdfAbstructData.txt  UsdAbc_AlembicDataReader.txt  UsdAbc_AlembicDataWriter.txt  _ReadPrim.txt  _ReadPrimChildren.txt  _ReaderContext_Open.txt  generateSchema.bat  memo.txt  test.abc  ドキュメント_usdGeomMesh.txt
Bat/: Bat.md
BuildSchema/: GenerateBuildSchema.bat  schema.usda
CodelessSchema/: GenerateBuildSchema.bat  GenerateCodelessSchema.bat  schema.usda
FlatBuffers/: README.md
Houdini/: ASCII.md  HAPI.md
Houdini/CityGenerator/: README.md
Houdini/FacadeGenerator/: README.md
Houdini/HAPI/: README.md
Math/: Quaternion.md
Math/Matrix/: README.md
Public/: MergeTest.hip  MergeTest_1.hip  MergeTest_ASCII_1.hip  MergeTest_ASCII_2.hip  memo.txt  stream.cpp  stream.h  streamIO.cpp  streamIO.h  translator.cpp
Public/backup/: MergeTest_1_bak1.hip  MergeTest_1_bak2.hip  MergeTest_ASCII_1_bak1.hip  MergeTest_ASCII_2_bak1.hip  MergeTest_bak1.hip
USD/: FileFormatPlugin.md  Tutorial.md  USDSkel.md
USD/CustomSchema/: CustomSchema.md
USD/FIleFormatPlugin/: README.md
USD/FIleFormatPlugin/plugins/usdGeo/: CMakeLists.txt  Geometry.cpp  Geometry.h  UsdGeoFileFormat.cpp  box_geo.geo  plugInfo.json
pxOsd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  _pxOsd.vcxproj  _pxOsd.vcxproj.filters  _pxOsd_pythonfiles.vcxproj  _pxOsd_pythonfiles.vcxproj.filters  cmake_install.cmake  pxOsd.vcxproj  pxOsd.vcxproj.filters  pxOsd_headerfiles.vcxproj  pxOsd_headerfiles.vcxproj.filters
(+58 files in other folders)
